# sad-monte-carlo

./: .fac  .gitignore  Cargo.toml  LJ31_Cv_Reference.csv  LJ31_Cv_Reference_3.csv  LJ31_Cv_Reference_4.csv  LJ31_Cv_Reference_alt.csv  README.md  attempt-256.sh  big-lj-31.sh  compare-sad-versions.sh  ising-wl-32-minGamma.sh  ising-wl-min-gamma.sh  pullall  run-benchmark-in-cpuset.sh  run-cluster.py  run-decahedra-clusters.sh  run-lj-31.py  run-lj-38.py  run-lj-clusters.sh  submit-grand.sh  submit-ising.sh  submit-sad-backup.sh  submit-square.sh  tRem_Ref.csv  tiny-lj-31.sh
.github/workflows/: test.yml
benches/: bench-sad.rs
energy-number/: samc-3x3x3.sh  samc-t0-1e3-1x1x1.sh  samc-t0-1e6-2x2x2.sh
fake/: gaussian.yaml  linear.yaml  parse.sh  plot.sh  quadratic.yaml  run-fake.py  run-fake.sh
grand-transposed/: run.sh
lj/: .gitignore  compute.py  convergence-for-proposal.py  heat_capacity.py  mytimer.py  parse.sh  rsync-dats  run-lj.py  styles.py
number/: samc-1x1x1-T1.0-t0-1e7.sh  samc-1x1x1-T1.0.sh  samc-2x2x2-T1.0-t0-1e7.sh  samc-2x2x2-T1.0.sh  samc-3x3x3-T1.0.sh  samc-v27-T1.0-t0-1e3.sh
plotting/: Practice Approx R1.py  Xeno's Algorithmn.py  Zeno_Method_I.py  analyze-boundaries.py  cluster.py  compute.py  convergence.py  energy-binning-movie.py  energy-movie.py  fake-analysis.py  fake-two-well.py  final_heat_capacity.py  find-p-vs-T.py  grand2d.py  lattice-gas-new.py  lattice-gas.py  lattice-gas.py.save  martiniani.py  movie-boundaries.py  movie-lattice-gas.py  movie-two-wells.py  movie.py  movie2d.py  new-movie.py  number-movie.py  number-plot.py  parse-binning.py  parse-production.py  parse-replicas.py  parse-tempering.py  parse-transposed.py  phase_transition_test.py  piecewise.py  readsystem.py  wca-p-excess.py
src/: atomicfile.rs  lib.rs  prettyfloat.rs  rng.rs  rotation.rs  unit_quaternion.rs
src/mc/: binning.rs  energy.rs  energy_binning.rs  energy_number.rs  energy_number_no_translation.rs  energy_production.rs  energy_replicas.rs  energy_transposed.rs  grand_transposed.rs  mod.rs  number.rs  plugin.rs  rng.rs  sad.rs  samc.rs  tempering.rs
src/old-bins/: energy-wca.rs  grand-transposed.rs  ising-mc.rs  lj-cluster.rs  transposed.rs
src/system/: any.rs  lj.rs  (+16 more)
tests/: resume-sad.rs  square-sad-test.rs
two-wells/: .gitignore  convergence-for-proposal.py  convergence-from-npz.py  convergence.py  find_phase_transition.py  generate-convergence.py  heat_capacity.py  mytimer.py  parse.sh  plotting_cv_from_npz.py  results_plotting.py  rsync-dats  run-two-wells.py  sample_prototype.py  styles.py  system.py
wca/: run-wca.py  start-simulations.sh
wca-transposed/: run.py  run.sh
(+3 files in other folders)
