[package]
name = "sad-monte-carlo"
version = "0.1.0"
authors = ["David Roundy <roundyd@oregonstate.edu>"]
edition = "2018"

[lib]

name = "sadmc"
path = "src/lib.rs"

[dependencies]

# dimensioned = { version = "0.7.0", features=["serde", "auto-args"] }
dimensioned = { git = "https://github.com/droundy/dimensioned", features=["serde", "auto-args"] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8.11"
serde_cbor = "0.10"
serde_json = "1.0"
auto-args = "0.2.7"
internment = "0.3.2"

vector3d = { version = "0.1.9", features=["serde1", "auto-args"] }
statrs = "0.7.0"
rand_core = "0.5.1"
rand = "0.7.2"
rand_distr = "0.2.2"
rand_xoshiro = { version = "0.4", features=["serde1"] }

tempfile = "3.0.3"
git-version = "0.3.0"
rayon = "1.4"

[dev-dependencies]
criterion = "0.3"
difference = "2.0"

# [profile.release]
# debug = true

[features]
# Treat warnings as a build error.
strict = []

[[bench]]
name = "bench-sad"
harness = false
